--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>42 Thrust</title>
+    <title>42 Huskies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -14,12 +14,12 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <img id="logo" src="img/42-thrust-logo.png" />
+    <img id="logo" src="img/42-huskies.png" />
     <div>
-      <a href="https://twitter.com/42thrust"
+      <a href="https://twitter.com/42huskies"
         ><img id="twitter" src="img/twitter.png"
       /></a>
-      <a href="https://instagram.com/42thrust"
+      <a href="https://instagram.com/42huskies"
         ><img id="instagram" src="img/instagram.png"
       /></a>
       <a href="https://www.youtube.com/channel/UCEf4zZtWiNWVcQsrPqkVAHg"
