--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
       <a href="https://twitter.com/42huskies"
         ><img id="twitter" src="img/twitter.png"
       /></a>
+      <!--  <a href="https://facebook.com/42Huskies"
+        ><img id="facebook" src="img/facebook.png"
+      /></a>
+    -->
       <a href="https://instagram.com/42huskies"
         ><img id="instagram" src="img/instagram.png"
       /></a>
       <a href="https://www.youtube.com/channel/UCEf4zZtWiNWVcQsrPqkVAHg"
         ><img id="youtube" src="img/youtube.png"
       /></a>
+      <!--  <a href="https://twitch.com/42Huskies"
+        ><img id="twitch" src="img/twitch.png"
+      /></a>
+   -->
     </div>
   </body>
 </html>
