--- a/index.html
+++ b/index.html
@@ -12,21 +12,38 @@
       href="css/styles.css"
     />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <img id="logo" src="img/42-huskies.png" />
-    <div>
-      <a href="https://twitter.com/42huskies"
+    <div id="nav">
+      <ul>
+        <li><a class="nav-m" href="pages/about.html">About Us</a></li>
+        <li>
+          <a class="nav-m" href="https://forms.gle/xz8BVwyQ7k5jJxZ5A"
+            >Recruitment</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div id="socials">
+      <a class="social-m" href="https://twitter.com/42huskies"
         ><img id="twitter" src="img/twitter.png"
       /></a>
       <!--  <a href="https://facebook.com/42Huskies"
         ><img id="facebook" src="img/facebook.png"
       /></a>
     -->
-      <a href="https://instagram.com/42huskies"
+      <a class="social-m" href="https://instagram.com/42huskies"
         ><img id="instagram" src="img/instagram.png"
       /></a>
-      <a href="https://www.youtube.com/channel/UCEf4zZtWiNWVcQsrPqkVAHg"
+      <a
+        class="social-m"
+        href="https://www.youtube.com/channel/UCEf4zZtWiNWVcQsrPqkVAHg"
         ><img id="youtube" src="img/youtube.png"
       /></a>
       <!--  <a href="https://twitch.com/42Huskies"
