--- a/pages/about.html
+++ b/pages/about.html
@@ -43,10 +43,10 @@
           <h1 data-aos="flip-left">Naol M. Denko</h1>
           <h3 class="position" data-aos="fade-right">Co-Founder & Chief Executive Officer</h3>
           <p data-aos="fade-up">
-              Naol M. Denko brings ample business experience as he founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs, a management agency that focused on artists and producers (managed 6 artists and 2 producers), and currently a mental health startup focused on elite athletes’ mental health. 
-              As Chief Executive Officer, Naol will be managing our team’s marketing, sponsorships, and business development efforts amongst other things. 
+              Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently he is working on a mental health startup focused on elite athletes’ mental health. 
+              As Chief Executive Officer, Naol will be managing the team’s marketing, sponsorship, and business development efforts amongst other things. 
               He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. 
-              Besides working on the business, Naol likes to produce music and watch Netflix.
+              Besides working on business, Naol likes to produce music and watch Netflix.
           </p>
       </div>
       <div id="kyeen">
@@ -54,7 +54,7 @@
           <h1 data-aos="flip-right">Kyeen Augustine</h1>
           <h3 class="position" data-aos="fade-left">Co-Founder & Chief Gaming Officer</h3>
           <p data-aos="fade-up">
-            Kyeen Augustine is a long-time gamer. He started playing games when he was 3 years old, but delved into games more when he got Halo 2 on Xbox. 
+            Kyeen is a long-time gamer. He started playing games when he was 3 years old, but delved into games more when he got Halo 2 for Xbox. 
             Fast forward to now, he has played Fortnite since its inception, and continues to play the game whenever he has a chance to. 
             As the Chief Gaming Officer, Kyeen will be managing the team, and act as the Team Captain for all multiplayer events. 
             Besides gaming, Kyeen likes to travel and fish lobster.
