--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
   <body>
     <img data-aos="fade-up" id="logo-two" src="../img/42-huskies.png" />
       <div id="about-us">
-        <h1 data-aos="fade-up" style="text-align: center; font-size: 40; !important">About Us</h1>
+        <h1 data-aos="fade-up" style="text-align: center; font-size: 40;">About Us</h1>
           <p data-aos="fade-up">
             42 Huskies is all about <span>winning memories</span>. We play games to <span>connect</span> with others, to <span>fight</span> together, while aiming for a similar goal, to win lasting <span>memories</span>, and to create <span>everlasting</span> legacies.</p>
             <p data-aos="fade-up">The number <span>"42"</span> is a dedication to Naol’s late father, <a class="mieso" href="https://ifip.informatik.uni-hamburg.de/ifip/tc/6/wg/6.9">Mieso K. Denko</a>, as he passed away with <span>liver</span> cancer in 2010 at the age of 42.
@@ -45,7 +45,7 @@
           <p data-aos="fade-up">
               Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently he is working on a mental health startup focused on elite athletes’ mental health. 
               As Chief Executive Officer, Naol will be managing the team’s marketing, sponsorship, and business development efforts amongst other things. 
-              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. 
+              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen, but he grew up playing Halo, Pokemon, and sport games.
               Besides working on business, Naol likes to produce music and watch Netflix.
           </p>
       </div>
