--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
           <p data-aos="fade-up">
               Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently he is working on a mental health startup focused on elite athletes’ mental health. 
               As Chief Executive Officer, Naol will be managing the team’s marketing, sponsorship, and business development efforts amongst other things. 
-              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen, but he grew up playing Halo, Pokemon, and sport games.
+              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen, however, Naol grew up playing Halo, Pokemon, and sport games.
               Besides working on business, Naol likes to produce music and watch Netflix.
           </p>
       </div>
@@ -56,7 +56,7 @@
           <p data-aos="fade-up">
             Kyeen is a long-time gamer. He started playing games when he was 3 years old, but delved into games more when he got Halo 2 for Xbox. 
             Fast forward to now, he has played Fortnite since its inception, and continues to play the game whenever he has a chance to. 
-            As the Chief Gaming Officer, Kyeen will be managing the team, and act as the Team Captain for all multiplayer events. 
+            As the Chief Gaming Officer, Kyeen will be managing the team, and act as the Team Captain for all Fortnite multiplayer events. 
             Besides gaming, Kyeen likes to travel and fish lobster.
           </p>
       </div>
