--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img id="logo" src="img/42-huskies.png" />
     <div id="nav">
       <ul>
-        <li><a class="nav-m" href="pages/about.html">About Us</a></li>
+        <li><a class="nav-m" href="pages/about.html">About</a></li>
         <li>
           <a class="nav-m" href="https://forms.gle/xz8BVwyQ7k5jJxZ5A"
             >Recruitment</a
