--- a/pages/about.html
+++ b/pages/about.html
@@ -62,6 +62,18 @@
       </div>
       <br>
       <br>
+      <div id="udai">
+        <img data-aos="fade-up" class="photo" src="../img/udai.png"/>
+        <h1 data-aos="flip-left">Udaibeer Sangha</h1>
+        <h3 class="position" data-aos="fade-right">Strategy & Operations Lead</h3>
+        <p data-aos="fade-up">
+          Udai is a smart, business-minded individual. He graduated from Schulich School of Business, a top business school in Canada, and currently works as a Management Consultant at PwC (PricewaterhouseCoopers) in Toronto.
+          As the Strategy & Operations Lead, he will focus on developing the overall strategy of our eSports team, and make sure our operations is functional and profitable.
+          Besides working, Udai likes to play pool with friends, and play games whenever he's not busy.
+        </p>
+    </div>
+    <br>
+    <br>
     <p id="go-back" data-aos="fade-up"><a class="nav-m" href="../index.html">Go Back</a></p>
     <div id="socials" data-aos="fade-up">
       <a class="social-m" href="https://twitter.com/42huskies"
