--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     />
   </head>
   <body>
-    <img id="logo" src="img/42-huskies.png" />
+    <img id="logo" src="img/husky.png" />
     <div id="nav">
       <ul>
         <li><a class="nav-m" href="pages/about.html">About</a></li>
+        <li id="slash">/</li>
         <li>
           <a class="nav-m" href="https://forms.gle/xz8BVwyQ7k5jJxZ5A"
             >Recruitment</a
