--- a/pages/about.html
+++ b/pages/about.html
@@ -24,13 +24,13 @@
       <div id="about-us">
         <h1 data-aos="fade-up" style="text-align: center; font-size: 40;">About Us</h1>
           <p data-aos="fade-up">
-            42 Huskies is all about <span>winning memories</span>. We play games to <span>connect</span> with others, to <span>fight</span> together, while aiming for a similar goal, to win lasting <span>memories</span>, and to create <span>everlasting</span> legacies.</p>
-            <p data-aos="fade-up">The number <span>"42"</span> is a dedication to Naol’s late father, <a class="mieso" href="https://ifip.informatik.uni-hamburg.de/ifip/tc/6/wg/6.9">Mieso K. Denko</a>, as he passed away with <span>liver</span> cancer in 2010 at the age of 42.
+            <span>42 Huskies</span> is all about <span>winning memories</span>. We play games to <span>connect</span> with others, to <span>fight</span> together, while aiming for a similar goal, to win lasting <span>memories</span>, and to create <span>everlasting</span> legacies.</p>
+            <p data-aos="fade-up">The number <span>"42"</span> is a dedication to one of our founders (Naol) late father, <a class="mieso" href="https://ifip.informatik.uni-hamburg.de/ifip/tc/6/wg/6.9">Mieso K. Denko</a>, as he passed away with <span>liver</span> cancer in 2010 at the age of 42.
             He left a memorable impact in the field of <span>computer science</span>, and was appreciated among peers and faculty. 
-            The University of Guelph formed a <span>scholarship</span> named <a class="mieso" href="https://www.uoguelph.ca/registrar/studentfinance/apps/awards?id=E0810">“Mieso Denko Memorial”</a> as an honor to his life’s work in research and education.</p>
+            The institution he was a part of (University of Guelph) formed a <span>scholarship</span> named <a class="mieso" href="https://www.uoguelph.ca/registrar/studentfinance/apps/awards?id=E0810">“Mieso Denko Memorial”</a> as an honor to his life’s work in research and education.</p>
             <p data-aos="fade-left">The word <span>"Huskies"</span> is what connects are founders. They met and became roommates at <span>Saint Mary’s University</span>, as they were recruited to play football for the Saint Mary’s Huskies. 
-            Thus, made them decide to use Huskies as their mascot and team name.</p>
-            <p  data-aos="fade-right">We aim to <span>foster</span> a collective of like-minded individuals who seek to win <span>championships</span> and create a <span>globally</span> acknowledged brand, and most importantly, make <span>memories</span>.</p>
+            Hence, made them decide to use <span>"Huskies"</span> as their mascot and team name.</p>
+            <p  data-aos="fade-right">Our aim is to <span>foster</span> a collective of like-minded individuals who seek; to win <span>championships</span>, to establish <span>themselves</span> and our <span>brand</span>, and to make phenomenal <span>memories</span>.</p>
             <p data-aos="fade-left">Because, at the end of the day... </p>
             <p data-aos="fade-right">It’s all about <span>winning memories</span>.
           </p>
@@ -43,10 +43,10 @@
           <h1 data-aos="flip-left">Naol M. Denko</h1>
           <h3 class="position" data-aos="fade-right">Co-Founder & Chief Executive Officer</h3>
           <p data-aos="fade-up">
-              Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently he is working on a mental health startup focused on elite athletes’ mental health. 
+              Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs, and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently, he is working on a new startup focused on elite athletes’ mental health. 
               As Chief Executive Officer, Naol will be managing the team’s marketing, sponsorship, and business development efforts amongst other things. 
-              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen, however, Naol grew up playing Halo, Pokemon, and sport games.
-              Besides working on business, Naol likes to produce music and watch Netflix.
+              He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. However, Naol grew up playing Halo, Pokemon, and sport games.
+              While not working, Naol likes to produce music and watch Netflix.
           </p>
       </div>
       <div id="kyeen">
@@ -56,7 +56,7 @@
           <p data-aos="fade-up">
             Kyeen is a long-time gamer. He started playing games when he was 3 years old, but delved into games more when he got Halo 2 for Xbox. 
             Fast forward to now, he has played Fortnite since its inception, and continues to play the game whenever he has a chance to. 
-            As the Chief Gaming Officer, Kyeen will be managing the team, and act as the Team Captain for all Fortnite multiplayer events. 
+            As the Chief Gaming Officer, Kyeen will be managing the players, and act as the Team Captain for all Fortnite multiplayer events. 
             Besides gaming, Kyeen likes to travel and fish lobster.
           </p>
       </div>
@@ -67,9 +67,9 @@
         <h1 data-aos="flip-left">Udaibeer Sangha</h1>
         <h3 class="position" data-aos="fade-right">Strategy & Operations Lead</h3>
         <p data-aos="fade-up">
-          Udai is a smart, business-minded individual. He graduated from Schulich School of Business, a top business school in Canada, and currently works as a Management Consultant at PwC (PricewaterhouseCoopers) in Toronto.
-          As the Strategy & Operations Lead, he will focus on developing the overall strategy of our eSports team, and make sure our operations is functional and profitable.
-          Besides working, Udai likes to play pool with friends, and play games whenever he's not busy.
+          Udai is a smart, business-minded individual. He graduated from Schulich School of Business, one of the top business schools in Canada, and currently works as a Management Consultant at PwC (PricewaterhouseCoopers) in Toronto.
+          As the Strategy & Operations Lead, he will be focusing on developing the overall strategy of our eSports team, and making sure our operations are functional and profitable.
+          Besides working, Udai likes to play pool with friends.
         </p>
     </div>
     <br>
