--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
             The institution he was a part of (University of Guelph) formed a <span>scholarship</span> named <a class="mieso" href="https://www.uoguelph.ca/registrar/studentfinance/apps/awards?id=E0810">“Mieso Denko Memorial”</a> as an honor to his life’s work in research and education.</p>
             <p data-aos="fade-left">The word <span>"Huskies"</span> is what connects are founders. They met and became roommates at <span>Saint Mary’s University</span>, as they were recruited to play football for the Saint Mary’s Huskies. 
             Hence, made them decide to use <span>"Huskies"</span> as their mascot and team name.</p>
-            <p  data-aos="fade-right">Our aim is to <span>foster</span> a collective of like-minded individuals who seek; to win <span>championships</span>, to establish <span>themselves</span> and our <span>brand</span>, and to make phenomenal <span>memories</span>.</p>
+            <p  data-aos="fade-right">Our aim is to <span>foster</span> a collective of like-minded individuals who seek: to win <span>championships</span>, to establish <span>themselves</span> and our <span>brand</span>, and to make phenomenal <span>memories</span>.</p>
             <p data-aos="fade-left">Because, at the end of the day... </p>
             <p data-aos="fade-right">It’s all about <span>winning memories</span>.
           </p>
