--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
           <h1 data-aos="flip-left">Naol M. Denko</h1>
           <h3 class="position" data-aos="fade-right">Co-Founder & Chief Executive Officer</h3>
           <p data-aos="fade-up">
-              Naol brings ample business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs, and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers). Currently, he is working on a new startup focused on elite athletes’ mental health. 
+              Naol brings business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers (managed 6 artists and 2 producers).
               As Chief Executive Officer, Naol will be managing the team’s marketing, sponsorship, and business development efforts amongst other things. 
               He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. However, Naol grew up playing Halo, Pokemon, and sport games.
               While not working, Naol likes to produce music and watch Netflix.
