--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <img id="logo" src="img/husky.png" />
+    <img id="logo" src="img/42-huskies.png" />
     <div id="nav">
       <ul>
         <li><a class="nav-m" href="pages/about.html">About</a></li>
