--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
-    <img data-aos="fade-up" id="logo-two" src="../img/husky.png" />
+    <img data-aos="fade-up" id="logo-two" src="../img/42-huskies.png" />
       <div id="about-us">
         <h1 data-aos="fade-up" style="text-align: center; font-size: 40;">About Us</h1>
           <p data-aos="fade-up">
