--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,7 @@
             Kyeen is a long-time gamer. He started playing games when he was 3 years old, but delved into games more when he got Halo 2 for Xbox. 
             Fast forward to now, he has played Fortnite since its inception, and continues to play the game whenever he has a chance to. 
             As the Chief Gaming Officer, Kyeen will be managing the players, and act as the Team Captain for all Fortnite multiplayer events. 
-            Besides gaming, Kyeen likes to travel and fish lobster.
+            When not gaming, Kyeen likes to travel and fish lobster.
           </p>
       </div>
       <br>
@@ -71,6 +71,16 @@
           Besides working, Udai likes to play pool with friends.
         </p>
     </div>
+    <div id="david">
+      <img data-aos="fade-up" class="photo" src="../img/david.png"/>
+      <h1 data-aos="flip-right">David Garrard</h1>
+      <h3 class="position" data-aos="fade-left">Co-Owner & Advisor</h3>
+      <p data-aos="fade-up">
+        David comes with 15+ years of tech & business experience. So far in his career, he was a Chief Technology Officer for Last Call Analytics, which eventually got acquired from <a class="david-links" href="https://ampleorganics.com/en/">Ample Organics</a>; he was a 
+        Vice President of Software for InsightAction Inc, in which he oversaw a customer-focused team of database, systems and user experience specialists; now he is currently a Strategy Technology Consultant for <a class="david-links" href="https://judi.ai/">JUDI.AI</a>, a private fintech company based in Vancouver, British Columbia. 
+        David is also the Founder of <a class="david-links" href="https://www.squarify.com/">Squarify</a>, a fast-growing results-driven software consultancy company based in Toronto, Ontario.
+        Before starting his career, David graduated from the University of Waterloo with a Bachelor's Degree in Economics. In his sparetime, David often watches curling or sailing.
+  </div>
     <br>
     <br>
     <p id="go-back" data-aos="fade-up"><a class="nav-m" href="../index.html">Go Back</a></p>
