--- a/pages/about.html
+++ b/pages/about.html
@@ -79,7 +79,7 @@
         David comes with 15+ years of tech & business experience. So far in his career, he was a Chief Technology Officer for Last Call Analytics, which eventually got acquired from <a class="david-links" href="https://ampleorganics.com/en/">Ample Organics</a>; he was a 
         Vice President of Software for InsightAction Inc, in which he oversaw a customer-focused team of database, systems and user experience specialists; now he is currently a Strategy Technology Consultant for <a class="david-links" href="https://judi.ai/">JUDI.AI</a>, a private fintech company based in Vancouver, British Columbia. 
         David is also the Founder of <a class="david-links" href="https://www.squarify.com/">Squarify</a>, a fast-growing results-driven software consultancy company based in Toronto, Ontario.
-        Before starting his career, David graduated from the University of Waterloo with a Bachelor's Degree in Economics. In his sparetime, David often watches curling or sailing.
+        Before starting his career, David graduated from the University of Waterloo with a Bachelor's Degree in Economics. As Co-Owner & Advisor, David will advise and introduce us to people in the business realm to enhance our team. In his spare time, David often watches curling or sailing.
   </div>
     <br>
     <br>
