--- a/pages/about.html
+++ b/pages/about.html
@@ -47,6 +47,7 @@
               He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. However, Naol grew up playing Halo, Pokemon, and sport games.
               While not working, Naol likes to produce music and watch Netflix.
           </p>
+          <a href="https://www.linkedin.com/in/naolmdenko/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
       </div>
       <div id="kyeen">
           <img data-aos="fade-up" class="photo" src="../img/kyeen.jpg"/>
@@ -70,17 +71,19 @@
           As the Strategy & Operations Lead, he will be focusing on developing the overall strategy of our eSports team, and making sure our operations are functional and profitable.
           Besides working, Udai likes to play pool with friends.
         </p>
+        <a href="https://www.linkedin.com/in/udaibeersangha/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
     </div>
     <div id="david">
       <img data-aos="fade-up" class="photo" src="../img/david.png"/>
       <h1 data-aos="flip-right">David Garrard</h1>
       <h3 class="position" data-aos="fade-left">Co-Owner & Advisor</h3>
       <p data-aos="fade-up">
-        David comes with 15+ years of tech & business experience. So far in his career, he was a Chief Technology Officer for Last Call Analytics, which eventually got acquired from <a class="david-links" href="https://ampleorganics.com/en/">Ample Organics</a>; he was a 
+        David comes with 15+ years of tech & business experience. So far in his career, he was the Chief Technology Officer for Last Call Analytics, which eventually got acquired from <a class="david-links" href="https://ampleorganics.com/en/">Ample Organics</a>; he was the 
         Vice President of Software for InsightAction Inc, in which he oversaw a customer-focused team of database, systems and user experience specialists; now he is currently a Strategy Technology Consultant for <a class="david-links" href="https://judi.ai/">JUDI.AI</a>, a private fintech company based in Vancouver, British Columbia. 
         David is also the Founder of <a class="david-links" href="https://www.squarify.com/">Squarify</a>, a fast-growing results-driven software consultancy company based in Toronto, Ontario.
         Before starting his career, David graduated from the University of Waterloo with a Bachelor's Degree in Economics. As Co-Owner & Advisor, David will advise and introduce us to people in the business realm to enhance our team. In his spare time, David often watches curling or sailing.
-  </div>
+        <a href="https://www.linkedin.com/in/dgarrard/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
+      </div>
     <br>
     <br>
     <p id="go-back" data-aos="fade-up"><a class="nav-m" href="../index.html">Go Back</a></p>
