--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
       href="https://fonts.googleapis.com/css2?family=Cabin&display=swap"
       rel="stylesheet"
     />
+<link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img id="logo" src="img/42-huskies.png" />
+    <!-- <img id="logo" src="img/42-huskies.png" /> -->
+    <video id="vid" width="550" height="500" autoplay muted style="margin-left: auto; margin-right: auto; display: block;">
+      <source src="img/42huskies-vid.mp4" type="video/mp4">
+        </video>
     <div id="nav">
       <ul>
         <li><a class="nav-m" href="pages/about.html">About</a></li>
