--- a/pages/about.html
+++ b/pages/about.html
@@ -17,10 +17,11 @@
       href="https://fonts.googleapis.com/css2?family=Cabin&display=swap"
       rel="stylesheet"
     />
+<link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
-    <img data-aos="fade-up" id="logo-two" src="../img/42-huskies.png" />
+    <img data-aos="fade-up" id="logo-two" src="../img/42-huskies-logo-v2.png" />
       <div id="about-us">
         <h1 data-aos="fade-up" style="text-align: center; font-size: 40;">About Us</h1>
           <p data-aos="fade-up">
@@ -118,6 +119,7 @@
         AOS.init({
             duration: 1200
         });
+        window.addEventListener('load', AOS.refresh)
       </script>
   </body>
 </html>
