--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- <img id="logo" src="img/42-huskies.png" /> -->
-    <video id="vid" width="550" height="500" autoplay muted style="margin-left: auto; margin-right: auto; display: block;">
+    <video id="vid" width="550" height="500" autoplay muted playsinline style="margin-left: auto; margin-right: auto; display: block;">
       <source src="img/42huskies-vid.mp4" type="video/mp4">
         </video>
     <div id="nav">
