--- a/pages/about.html
+++ b/pages/about.html
@@ -60,6 +60,7 @@
             As the Chief Gaming Officer, Kyeen will be managing the players, and act as the Team Captain for all Fortnite multiplayer events. 
             When not gaming, Kyeen likes to travel and fish lobster.
           </p>
+          <a href="https://www.linkedin.com/in/kyeen-augustine-1aa027209/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
       </div>
       <br>
       <br>
