--- a/pages/about.html
+++ b/pages/about.html
@@ -26,9 +26,9 @@
         <h1 data-aos="fade-up" style="text-align: center; font-size: 40;">About Us</h1>
           <p data-aos="fade-up">
             <span>42 Huskies</span> is all about <span>winning memories</span>. We play games to <span>connect</span> with others, to <span>fight</span> together, while aiming for a similar goal, to win lasting <span>memories</span>, and to create <span>everlasting</span> legacies.</p>
-            <p data-aos="fade-up">The number <span>"42"</span> is a dedication to one of our founders (Naol) late father, <a class="mieso" href="https://ifip.informatik.uni-hamburg.de/ifip/tc/6/wg/6.9">Mieso K. Denko</a>, as he passed away with <span>liver</span> cancer in 2010 at the age of 42.
-            He left a memorable impact in the field of <span>computer science</span>, and was appreciated among peers and faculty. 
-            The institution he was a part of (University of Guelph) formed a <span>scholarship</span> named <a class="mieso" href="https://www.uoguelph.ca/registrar/studentfinance/apps/awards?id=E0810">“Mieso Denko Memorial”</a> as an honor to his life’s work in research and education.</p>
+            <p data-aos="fade-up">The number <span>"42"</span> is a dedication to one of our founders (Naol) late father, <a class="mieso" href="https://ifip.informatik.uni-hamburg.de/ifip/tc/6/wg/6.9">Mieso K. Denko</a>, as he passed away with <span>liver</span> cancer in <span>2010</span> at the age of <span>42</span>.
+            He left a memorable impact in the field of <span>computer science</span>, and was <span>appreciated</span> among peers and faculty. 
+            The institution he was a part of (<span>University of Guelph</span>) formed a <span>scholarship</span> named <a class="mieso" href="https://www.uoguelph.ca/registrar/studentfinance/apps/awards?id=E0810">“Mieso Denko Memorial”</a> as an honor to his life’s work in research and education.</p>
             <p data-aos="fade-left">The word <span>"Huskies"</span> is what connects are founders. They met and became roommates at <span>Saint Mary’s University</span>, as they were recruited to play football for the Saint Mary’s Huskies. 
             Hence, made them decide to use <span>"Huskies"</span> as their mascot and team name.</p>
             <p  data-aos="fade-right">Our aim is to <span>foster</span> a collective of like-minded individuals who seek: to win <span>championships</span>, to establish <span>themselves</span> and our <span>brand</span>, and to make phenomenal <span>memories</span>.</p>
