--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
       <br>
       <h1 style="text-align: center; font-size: 60px;"  data-aos="fade-up">Team</h1>
       <div id="naol">
-          <img data-aos="fade-up" class="photo" src="../img/naol.jpg"/>
+          <img data-aos="fade-up" class="photo" src="../img/naol.png"/>
           <h1 data-aos="flip-left">Naol M. Denko</h1>
           <h3 class="position" data-aos="fade-right">Co-Founder & Chief Executive Officer</h3>
           <p data-aos="fade-up">
