--- a/pages/about.html
+++ b/pages/about.html
@@ -41,14 +41,14 @@
       <h1 style="text-align: center; font-size: 60px;"  data-aos="fade-up">Team</h1>
       <div id="naol">
           <img data-aos="fade-up" class="photo" src="../img/naol.png"/>
-          <h1 data-aos="flip-left">Naol M. Denko</h1>
+          <h1 data-aos="flip-left">Naol Denko</h1>
           <h3 class="position" data-aos="fade-right">Co-Founder & Chief Executive Officer</h3>
           <p data-aos="fade-up">
               Naol brings business experience as he previously founded a fitness startup that focused on using AI to deliver personalized workout/nutrition programs and a management agency that focused on managing artists and producers.
               He might have business prowess, but when it comes to gaming, he leaves that to Kyeen. However, Naol grew up playing Halo, Pokemon, and sport games.
               While not working, Naol likes to produce music and watch Netflix.
           </p>
-          <a href="https://www.linkedin.com/in/naolmdenko/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
+          <a href="https://www.linkedin.com/in/naoldenko/"><img data-aos="fade-up" id="linkedin" src="../img/linkedin.png"></a>
       </div>
       <br>
       <br>
